--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ test.txt
 pr2/AguaAgrupada.csv
 pr2/FrecuenciaResiduos.csv
 pr2/Contaminantes.csv
+pr2/SemaforosFrecuencia.json
+pr2/ej2/SemaforosFrecuencia.txt
