casi terminado 2... queda escribir salida a .txt

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ pr2/FrecuenciaResiduos.csv
 pr2/Contaminantes.csv
 pr2/SemaforosFrecuencia.json
 pr2/ej2/SemaforosFrecuencia.txt
+pr2/FrecuenciaOrdenada.json
