--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ pr2/FrecuenciaResiduos.csv
 pr2/Contaminantes.csv
 pr2/SemaforosFrecuencia.json
 pr2/ej2/SemaforosFrecuencia.txt
-pr2/FrecuenciaOrdenada.json
+pr2/FrecuenciaOrdenada.txt
