changes in gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ pr2/Contaminantes.csv
 pr2/SemaforosFrecuencia.json
 pr2/ej2/SemaforosFrecuencia.txt
 pr2/FrecuenciaOrdenada.txt
+
+#Database files
+pr4-sql/Libreria
